[package]
name = "staged-comp"
version = "0.1.0"
edition = "2018"

[dependencies]
lalrpop-util = "0.19.7"
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }

[build-dependencies]
lalrpop = "0.19.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "s"
